Fixed Enemy generation